change admin header

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.8"
 Django = "^4.1.7"
-django-restframework = "^0.0.1"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
