--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.8"
 Django = "^4.1.7"
 djangorestframework = "^3.14.0"
+python-dotenv = "^0.21.1"
+psycopg2 = "^2.9.5"
 
 
 [build-system]
