--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Django = "^4.1.7"
 djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.1"
 psycopg2 = "^2.9.5"
+gunicorn = "^20.1.0"
 
 
 [build-system]
