--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.1"
 psycopg2 = "^2.9.5"
 gunicorn = "^20.1.0"
+djangorestframework-simplejwt = "^5.2.2"
 
 
 [build-system]
